--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,4 @@
-chaplean_BundleName:
-    resource: "@ChapleanBundleNameBundle/Resources/config/routing.yml"
+chaplean_SocialButtons:
+    resource: "@ChapleanSocialButtonsBundle/Resources/config/routing.yml"
     prefix:   /
 
