--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-BundleName_index:
-    path: /
-    defaults: { _controller: ChapleanBundleNameBundle:Default:index }
+chaplean_social_buttons_homepage:
+    path:     /
+    defaults: { _controller: ChapleanSocialButtonsBundle:Default:index }
