--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,16 +22,15 @@
     <php>
         <server name="KERNEL_DIR" value="app/" />
     </php>
-    <!--<filter>-->
-        <!--<whitelist>-->
-            <!--<directory>src</directory>-->
 
-            <!--<exclude>-->
-                <!--<directory>src/*/*Bundle/Resources</directory>-->
-                <!--<directory>src/*/*Bundle/Tests</directory>-->
-                <!--<directory>src/*/Bundle/*Bundle/Resources</directory>-->
-                <!--<directory>src/*/Bundle/*Bundle/Tests</directory>-->
-            <!--</exclude>-->
-        <!--</whitelist>-->
-    <!--</filter>-->
+    <filter>
+        <whitelist>
+            <directory>Entity/</directory>
+            <directory>Helpers/</directory>
+            <directory>Resources/</directory>
+            <directory>Repository/</directory>
+            <directory>Twig/</directory>
+            <directory>Utility/</directory>
+        </whitelist>
+    </filter>
 </phpunit>
