--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "symfony/symfony": "2.7.*",
+        "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
         "symfony/assetic-bundle": "~2.3",
@@ -28,7 +28,7 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
-        "chaplean/unit-bundle": "1.7.*",
+        "chaplean/unit-bundle": "2.0.0",
         "chaplean/coding-standard": "1.1.*"
     },
     "autoload": {
