--- a/composer.json
+++ b/composer.json
@@ -23,21 +23,20 @@
         "symfony/assetic-bundle": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~4.0",
+        "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3",
+        "sensio/generator-bundle": "~3.0",
         "chaplean/unit-bundle": "2.0.0",
         "chaplean/coding-standard": "1.1.*"
     },
     "autoload": {
-        "psr-0": {
-            "Chaplean\\Bundle\\SocialButtonsBundle": "",
-            "SymfonyStandard": "app/"
-        }
+        "psr-4": {
+            "Chaplean\\Bundle\\SocialButtonsBundle\\": ""
+        },
+        "classmap": [ "app/AppKernel.php"]
     },
-    "target-dir" : "Chaplean/Bundle/SocialButtonsBundle",
     "config": {
         "bin-dir": "bin",
         "discard-changes": true
