Upgrade Bundle / Unit 3 / PHP7 compatibility

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,10 +3,10 @@ services:
         class : Chaplean\Bundle\SocialButtonsBundle\Helpers\SocialBarHelper
         tags :
             - {name : 'templating.helper', alias : 'social-buttons'}
-        arguments : [ @templating ]
+        arguments : [ '@templating' ]
 
     chaplean_social_buttons.social_bar_twig_extension:
         class: Chaplean\Bundle\SocialButtonsBundle\Twig\Extensions\ChapleanTwigSocialBar
         tags:
             - { name: 'twig.extension' }
-        arguments : [ @service_container ]
+        arguments : [ '@service_container' ]
