--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,4 @@
 chaplean_SocialButtons:
-    resource: "@ChapleanSocialButtonsBundle/Resources/config/routing.yml"
+    resource: '@ChapleanSocialButtonsBundle/Resources/config/routing.yml'
     prefix:   /
 
