--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,39 @@
-.idea
-/web/bundles/
+# Cache and logs (Symfony3 directory structure)
+/var/*
+!var/.gitkeep
+
+# Parameters
 /app/config/parameters.yml
-/var
-/build/
-/vendor
+
+# Managed by Composer
 /bin/*
 !bin/console
+/vendor/
+
+# Assets and user uploads
+/web/bundles/
+/web/uploads/
+
+# PHPUnit
 /phpunit.xml
-behat.yml
-*.php~
-!.gitkeep
+
+# Auto-saved files
+*~
+
+# Mac
+.DS_store
+
+# PhpStorm
+.idea
+
+# Compass
+.sass-cache/
+
+# Composer
+/composer.phar
+
+# Build data
+/build/
+
+# Karma coverage
+coverage/
