--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,26 @@
 {
     "name": "chaplean/social-buttons-bundle",
-    "description": "Template for social buttons",
-    "type": "symfony-bundle",
     "license": "MIT",
+    "type": "symfony-bundle",
+    "description": "Template for social buttons",
     "authors": [
         {
             "name": "Chaplean",
-            "homepage": "http://chaplean.com/"
+            "homepage": "http://www.chaplean.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "Chaplean\\Bundle\\SocialButtonsBundle\\": ""
+        },
+        "classmap": [
+            "app/AppKernel.php"
+        ]
+    },
     "repositories": [
         {
             "type": "composer",
-            "url": "http://satis.chaplean.com"
+            "url": "https://satis.chaplean.com"
         }
     ],
     "require": {
@@ -28,14 +36,9 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
-        "chaplean/unit-bundle": "2.0.0",
-        "chaplean/coding-standard": "1.1.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "Chaplean\\Bundle\\SocialButtonsBundle\\": ""
-        },
-        "classmap": [ "app/AppKernel.php"]
+        "chaplean/coding-standard": "1.1.*",
+        "chaplean/unit-bundle": "~3.0",
+        "satooshi/php-coveralls": "^1.0"
     },
     "config": {
         "bin-dir": "bin",
