--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,9 +1,11 @@
 imports:
     - { resource: parameters.yml }
+    - { resource: security.yml }
 
 framework:
+    test: ~
     translator:      { fallback: '%locale%' }
-    secret:          'S€cR3t'
+    secret:          '%secret%'
     router:
         resource: '%kernel.root_dir%/config/routing.yml'
         strict_requirements: true
@@ -12,7 +14,6 @@ framework:
     validation:      { enable_annotations: true }
     templating:
         engines: ['twig']
-        #assets_version: SomeVersionScheme
     default_locale:  '%locale%'
     trusted_hosts:   ~
     trusted_proxies: ~
@@ -23,7 +24,6 @@ framework:
     http_method_override: true
     profiler: { only_exceptions: false }
 
-
 # Twig Configuration
 twig:
     debug:            '%kernel.debug%'
@@ -31,7 +31,7 @@ twig:
 
 # Assetic Configuration
 assetic:
-    debug:          '%use_assetic_debug%'
+    debug:          '%kernel.debug%'
     use_controller: '%use_assetic_controller%'
     bundles:        ['ChapleanSocialButtonsBundle']
     ruby: '%ruby.bin%'
@@ -47,28 +47,32 @@ assetic:
 monolog:
     handlers:
         main:
+            type:         fingers_crossed
+            action_level: error
+            handler:      nested
+        nested:
             type:   stream
             path:   '%kernel.logs_dir%/%kernel.environment%.log'
             level:  info
         console:
             type:   console
-            bubble: false
-
 
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   pdo_mysql
-        host:     localhost
-        port:     3306
-        dbname:   test_database
-        user:     root
-        password: %database_password%
-        charset:  UTF8
-        server_version: 5.5
-        mapping_types:
-            enum: string
-
+        default_connection: default
+        connections:
+            default:
+                driver:   '%database_driver%'
+                host:     '%database_host%'
+                port:     '%database_port%'
+                dbname:   '%database_name%'
+                user:     '%database_user%'
+                password: '%database_password%'
+                charset:  UTF8
+                server_version: 5.6
+            logging: null
+            profiling: null
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         auto_mapping: true
