--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,9 +1,21 @@
 parameters:
+    database_driver: pdo_mysql
+    database_host: mysql
+    database_port: 3306
+    database_name: test_database
+    database_user: root
+    database_password: root
+
+    mailer_transport: smtp
+    mailer_host: 127.0.0.1
+    mailer_user: null
+    mailer_password: null
+
     locale: fr
-    secret: Pl3as3Chang3Th1sS3cr3tT0k3n
-    database_password: test
+    secret: ThatsChapleanSocialButtonsBun2le
+
     use_assetic_controller: false
-    use_assetic_debug: false
-    sass.bin: /usr/bin/sass
+
+    sass.bin: /usr/local/bin/sass
+    compass.bin: /usr/local/bin/compass
     ruby.bin: /usr/bin/ruby
-    compass.bin: /usr/bin/compass
