--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,9 @@
     ],
     "autoload": {
         "psr-4": {
-            "Chaplean\\Bundle\\SocialButtonsBundle\\": ""
-        },
-        "classmap": [
-            "app/AppKernel.php"
-        ]
+            "Chaplean\\Bundle\\SocialButtonsBundle\\": "",
+            "Tests\\": "Tests"
+        }
     },
     "repositories": [
         {
@@ -24,24 +22,43 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7.0.8",
         "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
-        "symfony/assetic-bundle": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~5.0",
-        "sensio/framework-extra-bundle": "^3.0.2"
+        "symfony/assetic-bundle": "~2.3"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~3.0",
         "chaplean/coding-standard": "1.1.*",
-        "chaplean/unit-bundle": "~3.0",
+        "chaplean/unit-bundle": "^4.0",
         "satooshi/php-coveralls": "^1.0"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+        ],
+        "post-update-cmd": [
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+        ]
     },
     "config": {
         "bin-dir": "bin",
-        "discard-changes": true
+        "platform": {
+            "php": "7.0.8"
+        }
+    },
+    "extra": {
+        "symfony-app-dir": "app",
+        "symfony-bin-dir": "bin",
+        "symfony-var-dir": "var",
+        "symfony-web-dir": "web",
+        "symfony-assets-install": "relative"
     }
 }
