Missing parameter data_fixtures_namespace

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,6 +14,8 @@ parameters:
     locale: fr
     secret: ThatsChapleanSocialButtonsBun2le
 
+    data_fixtures_namespace: false
+
     use_assetic_controller: false
 
     sass.bin: /usr/local/bin/sass
