Upgrading to Php7, PhpUnit 6.2, Docker new images, chaplean.com to .coop

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
     "name": "social-buttons-bundle",
     "version": "1.0.1",
     "authors": [
-        "Tom - Chaplean <tom@chaplean.com>"
+        "Tom - Chaplean <tom@chaplean.coop>"
     ],
     "license": "MIT",
     "ignore": [
