--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Chaplean",
-            "homepage": "http://www.chaplean.com"
+            "homepage": "http://www.chaplean.coop"
         }
     ],
     "autoload": {
@@ -18,34 +18,34 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "https://satis.chaplean.com"
+            "url": "https://satis.chaplean.coop"
         }
     ],
     "require": {
         "php": ">=7.0.8",
-        "symfony/symfony": "2.8.*",
-        "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
+        "doctrine/orm": "^2.4.8",
         "sensio/distribution-bundle": "~5.0",
-        "symfony/assetic-bundle": "~2.3"
+        "symfony/symfony": "2.8.*",
+        "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
         "chaplean/coding-standard": "1.1.*",
-        "chaplean/unit-bundle": "^4.0",
-        "satooshi/php-coveralls": "^1.0"
+        "chaplean/unit-bundle": "^6.0",
+        "mockery/mockery": "dev-master",
+        "satooshi/php-coveralls": "dev-master"
     },
     "scripts": {
-        "post-install-cmd": [
+        "symfony-scripts": [
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
         ],
+        "post-install-cmd": [
+            "@symfony-scripts"
+        ],
         "post-update-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+            "@symfony-scripts"
         ]
     },
     "config": {
