#26124, Prepare upgrade to symfony3.4

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,8 @@
 services:
+    _defaults:
+        autowire: true
+        public: true
+
     chaplean_social_buttons.social_bar_helper:
         class : Chaplean\Bundle\SocialButtonsBundle\Helpers\SocialBarHelper
         tags :
