--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,13 +26,17 @@ before_script:
 test:
     stage: test
     script:
-        - phpdbg -qrr ./bin/phpunit --configuration phpunit.xml.dist --colors=never --coverage-text
+        - phpdbg -qrr ./bin/phpunit --configuration phpunit.xml.dist --coverage-html coverage --coverage-text
+    artifacts:
+        paths:
+        - coverage/
+        expire_in: 1 day
+    except:
+        - master
+        - release
+        - dev
 
 deploy:
     stage: deploy
     script:
         - ssh chaplean@satis.chaplean.coop /home/www/chaplean.coop/satis/bin/satis build /home/www/chaplean.coop/satis/satis.json /home/www/chaplean.coop/satis/web 
-    only:
-        - master
-        - release
-        - dev
