--- a/composer.json
+++ b/composer.json
@@ -22,43 +22,20 @@
         }
     ],
     "require": {
-        "php": ">=7.0.8",
-        "doctrine/doctrine-bundle": "~1.4",
-        "doctrine/orm": "^2.4.8",
-        "sensio/distribution-bundle": "~5.0",
-        "symfony/symfony": "2.8.*",
+        "php": ">=7.1",
+        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/orm": "^2.5",
+        "sensio/distribution-bundle": "^5.0.19",
+        "symfony/symfony": "^3.4",
         "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
         "chaplean/coding-standard": "1.1.*",
-        "chaplean/unit-bundle": "^6.0",
+        "chaplean/unit-bundle": "dev-feature/symfony3.4",
         "mockery/mockery": "dev-master",
-        "satooshi/php-coveralls": "dev-master"
-    },
-    "scripts": {
-        "symfony-scripts": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
-        ],
-        "post-install-cmd": [
-            "@symfony-scripts"
-        ],
-        "post-update-cmd": [
-            "@symfony-scripts"
-        ]
+        "symfony/phpunit-bridge": "^4.0"
     },
     "config": {
-        "bin-dir": "bin",
-        "platform": {
-            "php": "7.0.8"
-        }
-    },
-    "extra": {
-        "symfony-app-dir": "app",
-        "symfony-bin-dir": "bin",
-        "symfony-var-dir": "var",
-        "symfony-web-dir": "web",
-        "symfony-assets-install": "relative"
+        "bin-dir": "bin"
     }
 }
