--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,6 +11,8 @@
     <php>
         <ini name="error_reporting" value="-1"/>
         <server name="KERNEL_DIR" value="app/"/>
+        <server name="KERNEL_Class" value="AppKernel"/>
+		<env name="SYMFONY_DEPRECATIONS_HELPER" value="weak"/>
     </php>
 
     <testsuites>
